[gd_scene load_steps=17 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://assets/sheep/run/f7.png" type="Texture" id=2]
[ext_resource path="res://assets/sheep/run/f1.png" type="Texture" id=3]
[ext_resource path="res://assets/sheep/run/f2.png" type="Texture" id=4]
[ext_resource path="res://assets/sheep/run/f3.png" type="Texture" id=5]
[ext_resource path="res://assets/sheep/run/f4.png" type="Texture" id=6]
[ext_resource path="res://assets/sheep/run/f5.png" type="Texture" id=7]
[ext_resource path="res://assets/sheep/run/f6.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/Baa1.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/Baa2.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/Jump.ogg" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.3349

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -6.32507, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, -30, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 81.0
angular_velocity_random = 0.59
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 5.0
scale_random = 0.6
scale_curve = SubResource( 4 )
color = Color( 0.866667, 0.866667, 0.866667, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
input_pickable = false
collision_layer = 1
collision_mask = 11
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.5721, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "run"
frame = 6
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="dust_particles" type="Particles2D" parent="."]
position = Vector2( -2.20367, 20.404 )
emitting = false
amount = 24
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 150, -100 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="jump_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="speedup_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="extra_speedup_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="preloader" type="Node2D" parent="."]
position = Vector2( 564.759, 1.29236 )

[node name="baa" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="baa2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

